--- a/rocon_android_connector/res/layout/nfc_reader.xml
+++ b/rocon_android_connector/res/layout/nfc_reader.xml
@@ -5,5 +5,9 @@
     android:orientation="vertical"
     android:background="@drawable/rocon_logo" >
     
+    <TextView 
+        android:id="@+id/stat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
