--- a/rocon_android_connector/res/layout/nfc_reader.xml
+++ b/rocon_android_connector/res/layout/nfc_reader.xml
@@ -3,11 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/rocon_logo" >
+    android:background="@drawable/rocon_main" >
     
-    <TextView 
-        android:id="@+id/stat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+	    
+	    <TextView android:id="@+id/INFORMATION"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:layout_centerVertical="true"
+	        android:textSize="9pt"
+	        android:text="주문 페이지로 이동중입니다."
+	        android:textColor="#556655"
+	        android:textStyle="bold"/>
+	    
+	    <TextView 
+	        android:id="@+id/VERSION"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:layout_alignParentRight="true"
+	        android:text="Ver:1.0 / Release:2013.05.03"
+	        android:textSize="10sp"/>
+    </RelativeLayout>
 
 </LinearLayout>
