--- a/listener/src/main/res/layout/main.xml
+++ b/listener/src/main/res/layout/main.xml
@@ -4,10 +4,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, RoconAndroidListener"
-    />
+    <LinearLayout
+        android:id="@+id/top_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#ff404040"
+        android:gravity="right"
+        android:orientation="horizontal">
+    </LinearLayout>
+    <org.ros.android.view.RosTextView
+        android:id="@+id/text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dip" />
 </LinearLayout>
 
