--- a/robot_remocon/src/main/res/layout/add_uri_dialog.xml
+++ b/robot_remocon/src/main/res/layout/add_uri_dialog.xml
@@ -54,12 +54,12 @@
   <TextView android:text="or"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-  <Button android:text="Scan a QR-code URI"
+  <Button android:text="QR-Code"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:drawableLeft="@drawable/qrcode"
           android:id="@+id/scan_robot_button"/>
-  <Button android:text="Search for local network"
+  <Button android:text="Scan the local network"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/search_master_button"/>
