--- a/robot_remocon/src/main/res/layout/add_uri_dialog.xml
+++ b/robot_remocon/src/main/res/layout/add_uri_dialog.xml
@@ -3,11 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 <LinearLayout android:orientation="vertical"
-              android:layout_width="fill_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:gravity="center"
-              >
+              android:minWidth="300dp">
   <TextView android:text="Fields marked with an asterisk (*) are required."
             android:layout_width="fill_parent"
             android:textColor="#FF0000"
@@ -15,22 +15,15 @@
   <TextView android:text="Enter master URI: *"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
-  <RelativeLayout
-      android:id="@+id/RelativeLayout01" android:layout_width="fill_parent"
-      android:layout_height="wrap_content">
-    <Button android:text="Enter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/enter_button"
-            android:layout_alignParentRight="true"/>
+
     <EditText android:id="@+id/uri_editor"
-              android:layout_alignParentLeft="true"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:inputType="textUri"
-              android:layout_toLeftOf="@+id/enter_button"/>
-  </RelativeLayout>
-  <TextView android:text="Enter control URI:"
+          android:layout_alignParentLeft="true"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:inputType="textUri"
+          android:layout_toLeftOf="@+id/enter_button"/>
+
+    <TextView android:text="Enter control URI:"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
   <EditText android:id="@+id/control_uri_editor"
@@ -47,25 +40,51 @@
   <TextView android:text="Enter wifi password if applicable:"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
-  <EditText android:id="@+id/wifi_password_editor"
+
+    <RelativeLayout
+      android:id="@+id/RelativeLayout01" android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+
+        <EditText android:id="@+id/wifi_password_editor"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+            android:layout_toLeftOf="@+id/enter_button"/> />
+
+        <Button android:text="Enter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/enter_button"
+                android:layout_alignParentRight="true" />
+    </RelativeLayout>
+
+    <TextView android:text="or"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
-  <TextView android:text="or"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-  <Button android:text="QR-Code"
-          android:layout_width="wrap_content"
+  <Button android:text="QR code"
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:drawableLeft="@drawable/qrcode"
-          android:id="@+id/scan_robot_button"/>
-  <Button android:text="Scan the local network"
-          android:layout_width="wrap_content"
+          android:id="@+id/qr_code_button"/>
+  <Button android:text="NFC tag"
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:id="@+id/search_master_button"/>
-  <Button android:text="Cancel"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/cancel_button"/>
+          android:drawableLeft="@drawable/nfc_tag"
+          android:id="@+id/nfc_tag_button"/>
+    <RelativeLayout
+        android:id="@+id/RelativeLayout02" android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+      <Button android:text="Scan the local network"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/search_master_button"
+              android:layout_toLeftOf="@+id/cancel_button"/>
+      <Button android:text="Cancel"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/cancel_button"
+              android:layout_alignParentRight="true" />
+    </RelativeLayout>
 </LinearLayout>
 </ScrollView>
