--- a/concert_remocon/src/main/res/layout/robot_master_chooser.xml
+++ b/concert_remocon/src/main/res/layout/robot_master_chooser.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content" 
             android:layout_weight=".5"
             android:text="Add a robot"
-            android:onClick="addRobotClicked"/>
+            android:onClick="addConcertClicked"/>
     <Button android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
             android:layout_weight=".5"
