--- a/concert_remocon/src/main/res/layout/concert_master_chooser.xml
+++ b/concert_remocon/src/main/res/layout/concert_master_chooser.xml
@@ -20,7 +20,7 @@
     <Button android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
             android:layout_weight=".5"
-            android:text="Add a robot"
+            android:text="Add a concert"
             android:onClick="addConcertClicked"/>
     <Button android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
