--- a/concert_remocon/src/main/res/layout/master_item.xml
+++ b/concert_remocon/src/main/res/layout/master_item.xml
@@ -15,7 +15,7 @@
              android:adjustViewBounds="true"/>
   <ImageView android:layout_width="60dp"
              android:layout_height="60dp"
-             android:id="@+id/robot_icon"
+             android:id="@+id/concert_icon"
              android:src="@drawable/turtlebot"
              android:adjustViewBounds="true"/>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,7 +28,7 @@
               android:textColor="#ffffcc"
               android:textSize="20sp"
               android:id="@+id/name"
-              android:text="Robot Name"/>
+              android:text="Concert Name"/>
     <TextView android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/uri"/>
