--- a/concert_remocon/src/main/res/menu/concert_master_chooser_option_menu.xml
+++ b/concert_remocon/src/main/res/menu/concert_master_chooser_option_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:id="@+id/add_robot"
-        android:title="Add Robot" />
+  <item android:id="@+id/add_concert"
+        android:title="Add Concert" />
   <item android:id="@+id/delete_unresponsive"
-        android:title="Delete Unresponsive Robots" />
+        android:title="Delete Unresponsive Concerts" />
   <item android:id="@+id/delete_all"
-        android:title="Delete All Robots" />
+        android:title="Delete All Concerts" />
   <item android:id="@+id/kill"
         android:title="Kill" />
   <item android:id="@+id/delete_selected"
-        android:title="Select Robots to Delete" />
+        android:title="Select Concerts to Delete" />
 </menu>
