Running apps, dashboard and leftover buttons cleanupped

--- a/concert_remocon/src/main/res/layout/main.xml
+++ b/concert_remocon/src/main/res/layout/main.xml
@@ -25,23 +25,9 @@ android:id="@+id/top_bar" >
   <TextView android:id="@+id/status_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
-  <Button android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:text="Stop Application"
-          android:onClick="stopApplicationsClicked"
-android:id="@+id/stop_applications"/>
-  <Button android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:text="Deactivate Concert"
-          android:onClick="deactivateConcertClicked"
-android:id="@+id/deactivate_concert"/>
-  <Button android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:text="App Manager"
-          android:onClick="exchangeButtonClicked"
-android:id="@+id/exchange_button"/>
-  <Button android:layout_width="fill_parent"
+  <Button android:id="@+id/leave_button"
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="Leave Concert"
-          android:onClick="chooseNewMasterClicked"/>
+          android:onClick="leaveConcertClicked"/>
 </LinearLayout>
